<resources>
    <!-- General Strings -->
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="text_load_movies_progress" translatable="false">Loading Movies</string>

    <!-- Strings related to Errors -->
    <string name="text_no_network_error" translatable="false">No Internet Connection</string>
    <string name="text_no_movies_error" translatable="false">No Movies Found</string>
    <string name="text_no_movie_selected" translatable="false">Select a movie on the left panel.</string>
    <string name="text_no_favourite_movies_error" translatable="false">No Favourite Movies Found</string>
    <string name="error_view_oops" translatable="false">Oops</string>
    <string name="error_view_damn" translatable="false">Damn</string>
    <string name="button_text_retry" translatable="false">RETRY</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings" translatable="false">Settings</string>
    <!-- Settings for sorting the order of the movies -->
    <string name="pref_header_sort_order" translatable="false">Sort Order</string>

    <string name="pref_title_order_by" translatable="false">Order by</string>
    <string-array name="pref_order_by_titles" translatable="false">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Favourites</item>
    </string-array>
    <string-array name="pref_order_by_values" translatable="false">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Favourites</item>
    </string-array>

    <string name="sort_order_key" translatable="false">sort_order</string>
    <string name="title_activity_details" translatable="false">Movie Details</string>

    <string name="loading_movies" translatable="false">Loading Movies</string>
    <string name="movie_title" translatable="false">Title</string>
    <string name="movie_genre" translatable="false">Genre</string>
    <string name="movie_release_date" translatable="false">Release Date</string>
    <string name="movie_votes_average" translatable="false">0.00</string>
    <string name="movie_synopsis_heading" translatable="false">Synopsis</string>
    <string name="trailer_heading" translatable="false">Trailers</string>
    <string name="trailer_name" translatable="false">Trailer Name</string>
    <string name="reviews_heading" translatable="false">Reviews</string>
    <string name="review_author" translatable="false">Review Author</string>
    <string name="review_content" translatable="false">Review Content</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
