<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/movie_poster_thumbnail"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/movie_title"
            android:text="@string/movie_title"
            style="@style/headingStyle" />

        <TextView
            android:id="@+id/movie_genre"
            android:text="@string/movie_genre"
            style="@style/SubHeadingStyle"/>

        <TextView
            android:id="@+id/movie_release_date"
            android:text="@string/movie_release_date"
            android:textSize="10sp"
            android:layout_gravity="start|top"
            android:scrollHorizontally="true"
            android:maxEms="10"
            android:ellipsize="end"
            android:maxLines="1"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
