<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/details_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_action_play"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignBottom="@+id/details_movie_poster"
                    android:background="@color/colorTintedBlack"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/movie_title"
                        android:layout_above="@+id/details_movie_genres"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/details_movie_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/movie_genre"
                        android:layout_above="@+id/details_movie_release_date"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/details_movie_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:layout_weight="10"
                            android:textColor="@color/colorWhite"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/movie_release_date"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/details_average_votes"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/colorWhite"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/movie_votes_average"/>

                            <ImageView
                                android:id="@+id/ic_votes_rating_average"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_action_important"
                                android:layout_weight="2" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/movie_synopsis_heading"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_weight="1" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/details_favourite_movie"
                        android:src="@drawable/ic_action_favorite"
                        android:background="@android:color/transparent"
                        android:layout_weight="0" />

                </LinearLayout>

                <TextView
                    android:id="@+id/details_movie_plot_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/lorem_ipsum" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/trailer_heading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                <ListView
                    android:id="@+id/trailer_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:orientation="vertical">
                </ListView>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:layout_weight="2.53">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/reviews_heading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_weight="1" />
                <LinearLayout
                    android:id="@+id/reviews_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
